[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dive"
version = "0.1.0"
description = "Data Insight and Visualization Engine"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Blake", email = "pleasework413@gmail.com"}
]
keywords = ["data", "statistics", "visualization", "prediction"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://github.com/sir-cakes-alot/dive"

[tool.setuptools.packages.find]
where = ["."]
include = ["dive*"]
