[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dive-for-data"
version = "0.1.1"
description = "DIVE — Data Insight and Visualization Engine"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-only"}
authors = [
    {name = "Blake J.P.", email = "pleasework413@gmail.com"}
]
keywords = ["data", "statistics", "visualization", "prediction"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://github.com/sir-cakes-alot/dive"

[tool.setuptools.packages.find]
where = ["."]
include = ["dive*"]
